@@ -242,7 +242,7 @@ sub fetch_dictionary
                   sprint_message($0, undef, undef, 'ERROR', 'unable to fetch'
                                . "file '$ftp{file}'",
                                   lcfirst($ftp_agent->message));
-    note( $0, $dict_file_uri, undef, 'succesfully downloaded the dictionary and '
+    note( $0, $dict_file_uri, undef, 'successfully downloaded the dictionary and '
         . "stored it as '$temporary_store' for further processing", undef );
     $ftp_agent->quit;
 
