@@ -1,4 +1,4 @@
 Tests behaviour when a bibliography file provided using the --bibliography
 option contains several datablocks. One of the bibliography datablocks has
 the same name as the datablock of the filtered CIF. Raises a warning dealing
-with multiple datablocks, but matches bibliography succesfully.
+with multiple datablocks, but matches bibliography successfully.
