@@ -1,4 +1,4 @@
-ERROR, value 'Not a proper datetime string' could not be succesfully parsed as a timestamp value
-ERROR, value 'Not a proper datetime string' could not be succesfully parsed as a timestamp value
+ERROR, value 'Not a proper datetime string' could not be successfully parsed as a timestamp value
+ERROR, value 'Not a proper datetime string' could not be successfully parsed as a timestamp value
 Values are treated as being the same.
 Values are treated as being the same.
