@@ -1,9 +1,9 @@
-Value 'This is a text string' could not be succesfully parsed as a timestamp value.
-Value '2000-23-01' could not be succesfully parsed as a timestamp value.
-Value '2000-02-30' could not be succesfully parsed as a timestamp value.
-Value ' 2000-02-30' could not be succesfully parsed as a timestamp value.
-Value '2000-02-30 ' could not be succesfully parsed as a timestamp value.
-Value ' 1985-04-12T23:20:50.52Z' could not be succesfully parsed as a timestamp value.
-Value '1985-04-12T23:20:50.52Z ' could not be succesfully parsed as a timestamp value.
-Value '1985-04-12T23:20:50.52J' could not be succesfully parsed as a timestamp value.
-Value '1985-04-12 23:20:50.52Z' could not be succesfully parsed as a timestamp value.
+Value 'This is a text string' could not be successfully parsed as a timestamp value.
+Value '2000-23-01' could not be successfully parsed as a timestamp value.
+Value '2000-02-30' could not be successfully parsed as a timestamp value.
+Value ' 2000-02-30' could not be successfully parsed as a timestamp value.
+Value '2000-02-30 ' could not be successfully parsed as a timestamp value.
+Value ' 1985-04-12T23:20:50.52Z' could not be successfully parsed as a timestamp value.
+Value '1985-04-12T23:20:50.52Z ' could not be successfully parsed as a timestamp value.
+Value '1985-04-12T23:20:50.52J' could not be successfully parsed as a timestamp value.
+Value '1985-04-12 23:20:50.52Z' could not be successfully parsed as a timestamp value.
