@@ -1,7 +1,8 @@
 cod-tools (unreleased)
 
   * Fixed:
-    - test outputs for codcif2sdf and molcif2sdf.
+    - test outputs for codcif2sdf and molcif2sdf;
+    - correcting a typo 'succesfully' -> 'successfully'.
 
 cod-tools (2.5)
 
